frontend/src/components/Projects/Facet.css
.facet-header {
  padding: 14px;

  display: flex;
  gap: 14px;
}

.facet-header:hover {
  cursor: default;
}

.facet-form:hover {
  cursor: pointer;
}

.facet-name {
  background-color: var(--nav-bar-bg);
  color: var(--font-color);
  border-radius: 12px;
  width: max-content;
  min-width: 200px;

  padding: 14px;
  font-size: 18px;
  font-weight: 300;
}

.add-facet-label {
  background-color: var(--dark-bg); 
}

.facet-error {
  color: var(--error-color);
  font-weight: 500;
}

.facet-input {
  grid-area: a;
  background-color: var(--dark-bg); 
  height: 50px;
  min-width: 228px;
  width: 100%;
  margin: 0;
  text-align: left;
  padding-left: 13px;
  box-sizing: border-box;
}

.facet-form {
  display: grid;
  grid-template-areas: 'a';
  min-width: 200px;
}

.form-resizer {
  z-index: -1;
  grid-area: a;
  font-family: Lato, sans-serif;
  opacity: 0;
  padding: 0px 13px;
  font-size: 18px;
}

.facet-delete:hover {
  border: 1px solid red;
}

